自制confirm提示弹框

--- a/面向对象构造函数/demo.html
+++ b/面向对象构造函数/demo.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <button id="btn">删除</button>
-<script src="../js/jquery.js"></script>
+<script src="jquery.js"></script>
 <script src="demo.js"></script>
 <script>
 $("#btn").on("click",function(){
