--- a/Object.defineProperty详解/demo.html
+++ b/Object.defineProperty详解/demo.html
@@ -5,55 +5,53 @@
     <title>Title</title>
 </head>
 <body>
+<div id="app">
+    {{name}}<br/>{{name}}
+    <input type="text" oninput="change(this)"/>
+</div>
+<button onclick="tab()">变换</button>
 <script type="text/javascript">
+    var App = document.getElementById("app");
+    var html = App.innerHTML;
+    function Vue(obj){
+        console.log(obj.name);
+        console.log(1);
+        var str = html.replace(/{{name}}/g, obj.name);
+        App.innerHTML=str
+    }
+
     //字面量表达式定义对象默认enumerable、configurable、writable都为true
-    var name="11",txt="22";
-    var obj={name,txt};
-    var obj2={}
+    var name = "11", txt = "22";
+    var obj = {name, txt};
+    var obj2 = {};
 
     for(var key of Object.keys(obj)){
         console.log(key);
-            (function(key,value){
-                Object.defineProperty(obj2,key, {
-                    enumerable : true,
-                    configurable : true,
-                    get: function() {
-                        console.log("获取了"+key+"的值");
-                        return value;
-                    },
-                    set: function(newValue) {
-                        console.log("设置了"+key+"的值");
-                        value=newValue
-                    }
-                });
-            })(key,obj[key])
+        (function(key, value){
+            Object.defineProperty(obj2, key, {
+                enumerable : true,
+                configurable : true,
+                get : function(){
+                    console.log("获取了" + key + "的值");
+                    return value;
+                },
+                set : function(newValue){
+                    console.log("设置了" + key + "的值"+newValue);
+
+                    value = newValue;
+                    Vue(obj2)
+                }
+            });
+        })(key, obj[key])
     }
-    /*Object.defineProperty(obj,"name", {
-        enumerable : true,
-        configurable : true,
-        get: function() {
-            console.log("获取了name的值");
-            return name;
-        },
-        set: function(newValue) {
-            console.log("设置了name的值");
-            name=newValue
-        }
-    });
-    Object.defineProperty(obj,"txt", {
-        enumerable : true,
-        configurable : true,
-        get: function() {
-            console.log("获取了txt的值");
-            return txt;
-        },
-        set: function(newValue) {
-            console.log("设置了txt的值");
-            txt=newValue
-        }
-    });*/
-    /*obj.name="demo";
-    obj.txt="示例"*/
+    Vue(obj2)
+    function tab(){
+        obj2.name=Math.random()
+    }
+    function change(self){
+        console.log(self.value);
+        obj2.name=self.value;
+    }
 </script>
 </body>
 </html>
