--- a/前端数据采集/demo.html
+++ b/前端数据采集/demo.html
@@ -19,7 +19,11 @@
             console.log("服务器错误");
         }
     })
-    console.log(b);
+    function a(){
+        var b
+        console.log(b.a);
+    }
+    a()
 </script>
 </body>
 </html>
