--- a/ajax/demo.html
+++ b/ajax/demo.html
@@ -23,10 +23,10 @@
             },
         })*/
 
-        console.log(date);
+//        console.log(date);
         //        console.log(new Date(y + "-" + (m - 1)).toLocaleDateString());
-        result=new Date(y+"-"+1).getMonth();
-        console.log(result);
+//        result=new Date(y+"-"+1).getMonth();
+//        console.log(result);
 
     })
 </script>
