--- a/百度地图api/经纬度批量展示/demo.html
+++ b/百度地图api/经纬度批量展示/demo.html
@@ -33,6 +33,9 @@
         new BMap.Point(116.42413701159672,39.90795884517671),
         new BMap.Point(116.43413701159672,39.90795884517671)
     ];
+    function ad(){
+        arguments
+    }
     for (var i = 0; i < points.length; i ++) {
         var point = points[i]
         addMarker(point);
